--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -9,6 +9,8 @@ jobs:
   calculate-version:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2
       - name: Calculate version
         shell: bash
         run: |
@@ -95,7 +97,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: version
-      - name: Build version
+      - name: Print current version
         run: less version.txt
       - name: Build with Maven
         run: mvn verify
