--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -101,3 +101,10 @@ jobs:
         run: less version.txt
       - name: Build with Maven
         run: mvn verify
+  publish:
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: ${{ GITHUB_REF_TYPE == branch && GITHUB_REF_NAME == master }}
+    steps:
+      - name: Here will be docker build
+        run: echo 'building docker image'
