--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -104,7 +104,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: [build]
-    if: ${{ GITHUB_REF_TYPE == branch && GITHUB_REF_NAME == master }}
+    if: ${{ $GITHUB_REF_TYPE == branch && $GITHUB_REF_NAME == master }}
     steps:
       - name: Here will be docker build
         run: echo 'building docker image'
