--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -104,7 +104,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: [build]
-    if: ${{ env.GITHUB_REF_TYPE == 'branch' && env.GITHUB_REF_NAME == 'master' }}
+    if: ${{ github.ref_type == 'branch' && github.ref_name == 'master' }}
     steps:
       - name: Here will be docker build
         run: echo 'building docker image'
