--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -101,12 +101,10 @@ jobs:
         run: less version.txt
       - name: Build with Maven
         run: mvn verify
-      - name: debug master condition
-        run: echo ${{ github.ref_type }} and ${{ github.ref_name }}
   publish:
     runs-on: ubuntu-latest
     needs: [build]
-    if: ${{ github.ref_type == 'branch' && github.ref_name == 'master' }}
+    if: ${{ github.ref_type == 'branch' && github.ref_name == 'main' }}
     steps:
       - name: Here will be docker build
         run: echo 'building docker image'
