--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -8,8 +8,8 @@ on: [push]
 jobs:
   calculate-version:
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.version-output-step.outputs.version-output }}
+#    outputs:
+#      version: ${{ steps.version-output-step.outputs.version-output }}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
@@ -78,8 +78,8 @@ jobs:
           echo $RELEASE_VERSION > version.txt
 
           echo 'New version:' $RELEASE_VERSION
-      - id: version-output-step
-        run: echo '::set-output name=version-output::'$RELEASE_VERSION
+#      - id: version-output-step
+#        run: echo '::set-output name=version-output::${RELEASE_VERSION}' #TODO not working
       - name: Upload version file
         uses: actions/upload-artifact@v2
         with:
@@ -101,12 +101,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: version
-      - run: RELEASE_VERSION=$(cat version.txt)
-      - name: Print current version
-        run: echo $RELEASE_VERSION
-      - name: Print version from output
-        run: echo ${{needs.calculate-version.outputs.version}}
-      - run: sed -i -e "s/<version>local<\/version>/<version>${RELEASE_VERSION}<\/version>/" pom.xml
+      - run: sed -i -e "s/<version>local<\/version>/<version>${cat version.txt}<\/version>/" pom.xml
       - name: Build with Maven
         run: mvn verify
       - name: Upload JAR file
@@ -131,6 +126,10 @@ jobs:
         uses: docker/setup-buildx-action@v1
         with:
           driver-opts: network=host
+      - name: Download version file
+        uses: actions/download-artifact@v2
+        with:
+          name: version
       - name: Download JAR file
         uses: actions/download-artifact@v2
         with:
@@ -141,7 +140,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: localhost:5000/pbak95/test-app:latest
+          tags: localhost:5000/pbak95/test-app:${cat version.txt}
       - name: Inspect
         run: |
-          docker buildx imagetools inspect localhost:5000/pbak95/test-app:latest
+          docker buildx imagetools inspect localhost:5000/pbak95/test-app:${cat version.txt}
