--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>pl.pbak.demo</groupId>
 	<artifactId>test</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>local</version>
 	<name>Test App</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
