--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -103,7 +103,7 @@ jobs:
           name: version
       - name: Building version
         run: cat version.txt
-      - run: sed -i -e "s/<version>local<\/version>/<version>${cat version.txt}<\/version>/" pom.xml
+      - run: sed -i -e "s/<version>local<\/version>/<version>$(cat version.txt)<\/version>/" pom.xml
       - name: Build with Maven
         run: mvn verify
       - name: Upload JAR file
