--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -142,7 +142,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: localhost:5000/pbak95/test-app:${cat version.txt}
+          tags: localhost:5000/pbak95/test-app:$(cat version.txt)
       - name: Inspect
         run: |
-          docker buildx imagetools inspect localhost:5000/pbak95/test-app:${cat version.txt}
+          docker buildx imagetools inspect localhost:5000/pbak95/test-app:$(cat version.txt)
