--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -114,16 +114,9 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     needs: build
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         with:
@@ -139,12 +132,14 @@ jobs:
         with:
           name: app
           path: target/
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       - name: Build and push to local registry
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: localhost:5000/pbak95/test-app:${{ steps.read-version.outputs.version }}
-      - name: Inspect
-        run: |
-          docker buildx imagetools inspect localhost:5000/pbak95/test-app:${{ steps.read-version.outputs.version }}
+          tags: pbak95/test-app:${{ steps.read-version.outputs.version }}
