--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -114,6 +114,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     needs: build
+    if: ${{ github.ref_type == 'branch' && github.ref_name == 'main' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
