--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -80,12 +80,6 @@ jobs:
           echo 'New version:' $RELEASE_VERSION
       - id: version-output-step
         run: echo "::set-output name=version-output::$(cat version.txt)"
-      - name: Upload version file
-        uses: actions/upload-artifact@v2
-        with:
-          name: version
-          path: version.txt
-          retention-days: 10
   build:
     runs-on: ubuntu-latest
     needs: calculate-version
@@ -98,13 +92,9 @@ jobs:
           java-version: '16'
           distribution: 'temurin'
           cache: maven
-      - name: Download version file
-        uses: actions/download-artifact@v2
-        with:
-          name: version
       - name: Building version
-        run: cat version.txt
-      - run: sed -i -e "s/<version>local<\/version>/<version>$(cat version.txt)<\/version>/" pom.xml
+        run: echo ${{ needs.calculate-version.outputs.version }}
+      - run: sed -i -e "s/<version>local<\/version>/<version>${{ needs.calculate-version.outputs.version }}<\/version>/" pom.xml
       - name: Build with Maven
         run: mvn verify
       - name: Upload JAR file
@@ -115,7 +105,7 @@ jobs:
           retention-days: 10
   docker:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [calculate-version, build]
     if: ${{ github.ref_type == 'branch' && github.ref_name == 'main' }}
     steps:
       - name: Checkout
@@ -124,12 +114,6 @@ jobs:
         uses: docker/setup-buildx-action@v1
         with:
           driver-opts: network=host
-      - name: Download version file
-        uses: actions/download-artifact@v2
-        with:
-          name: version
-      - id: read-version
-        run: echo "::set-output name=version::$(cat version.txt)"
       - name: Download JAR file
         uses: actions/download-artifact@v2
         with:
@@ -145,7 +129,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: pbak95/test-app:${{ steps.read-version.outputs.version }}
+          tags: pbak95/test-app:${{ needs.calculate-version.outputs.version }}
   trigger-deploy:
     runs-on: ubuntu-latest
     needs: [ calculate-version, docker ]
