--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -125,9 +125,10 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       - name: Build and push to local registry
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: pbak95/test-app:${{ needs.calculate-version.outputs.version }}
   trigger-deploy:
